# payby_data_analyst

./: README.md  pyproject.toml
Qi/week_02_11_2024/: playground_csv.ipynb
Qi/week_02_11_2024/data/: dish_name_Brazilian.txt  dish_name_English.txt  payby_data_202401232353.csv
Qi/week_02_18_2024/: playground_db.ipynb
Qi/week_02_25_2024/: playground_db.ipynb
Qi/week_03_03_2024/: mint_implementation.ipynb  playground_db.ipynb
Qi/week_03_18_2024/: RecipeFT_Guide.ipynb  nutrition_scores.ipynb  playground_db.ipynb
Qi/week_03_18_2024/process/: RecipeFT_Guide.ipynb  all_dish_names_ENG.txt  all_dish_names_Portuguese.txt  dish_name_English.csv  dish_name_English_RecipeFT_embedding.npy  get_all_dish_names.py  target_kf5.csv
Qi/week_03_25_2024/: playground_db.ipynb
Qi/week_03_25_2024/Django_usr_reg&auth/auth/auth/: settings.py  urls.py
Qi/week_03_25_2024/Django_usr_reg&auth/auth/myapp/: forms.py  urls.py  views.py
Qi/week_03_25_2024/Django_usr_reg&auth/auth/myapp/templates/myapp/: dashboard.html  index.html  my_login.html  register.html
Qi/week_04_01_2024/: playground_db.ipynb
